--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.oluwatobi_accessKeys.csv*
-.swiggy-app.pem*
+.oluwatobi_accessKeys.csv
+.swiggy-app.pem
